@@ -13,6 +13,7 @@
 * Fixed a regression when standalone CMS Widgets wouldn't work due to
   non-existing JavaScript dependencies.
 * Fixed a possible recursion error when using the ``Alias`` plugin.
+* Make it possible to use multi-table inheritance for Page/Title extensions.
 
 
 === 3.3.2 (unreleased) ===
